# Diploma

./: CMakeLists.txt
src/: main.cpp
utils/: grid.cpp  grid.h
